--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     margin: 15px;
 }
 
-#player-selection-icon, #opponent-selection-icon {
+#player-selection, #opponent-selection {
     background-color: blue;
     width: 250px;
     height: 250px;
@@ -67,6 +67,7 @@ body {
     justify-content: center;
     gap: 50px;
     padding: 0px;
+    pointer-events: none;
 }
 
 button {
@@ -75,23 +76,26 @@ button {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    pointer-events: auto;
 }
 
 button:hover {
     background-color: darkblue;
 }
 
-#rock img {
+#rock img, #paper img, #scissors img {
     height: auto;
+    pointer-events: none;
+}
+
+#rock img {
     width: 50px;
 }
 
 #paper img {
-    height: auto;
     width: 60px;
 }
 
 #scissors img {
-    height: auto;
     width: 45px;
 }
