--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color: hsl(240, 100%, 70%);
     font-weight: bold;
     height: 100vh;
     display: flex;
@@ -8,8 +8,8 @@ body {
 
 .main-container {
     background-color: white;
-    flex: 1;
     text-align: center;
+    flex: 1;
 }
 
 .title {
@@ -37,7 +37,7 @@ body {
 }
 
 #player-selection, #opponent-selection {
-    background-color: blue;
+    background-color: hsl(240, 100%, 70%);
     width: 250px;
     height: 250px;
     border-radius: 50%;
@@ -62,30 +62,30 @@ body {
 }
 
 #buttons {
+    pointer-events: none;
     list-style-type: none;
     display: flex;
     justify-content: center;
     gap: 50px;
     padding: 0px;
-    pointer-events: none;
 }
 
 button {
-    background-color: blue;
+    pointer-events: auto;
+    background-color: hsl(240, 100%, 70%);
     border: none;
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    pointer-events: auto;
 }
 
 button:hover {
-    background-color: darkblue;
+    background-color: hsl(220, 100%, 70%);
 }
 
 #rock img, #paper img, #scissors img {
-    height: auto;
     pointer-events: none;
+    height: auto;
 }
 
 #rock img {
